# Elham.ai-math

./: .gitignore  Bindings.hpp  CMakeLists.txt  Graph.hpp  Graph.py  Kernels.hpp  Kernels_cpu.cpp  Node.hpp  Node.py  README.md  Tensor.hpp  bindings.cpp  build.sh  main.py  test_code.cpp  tutorial.ipynb
ElhamMath/: ElhamMath.cp312-win_amd64.pyd  __init__.py  __init__.pyi
